# theme-ubuntuusers

./: .bumpversion.cfg  .gitignore  Gruntfile.js  Jenkinsfile  LICENSE  MANIFEST.in  README.rst  SECURITY.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: test.yml
.tx/: config
inyoka_theme_ubuntuusers/: __init__.py
inyoka_theme_ubuntuusers/jinja2/: 500.html  appheader.html  confirm_action.html  confirm_action_flash.html  macros.html  overall.html  overall.m.html
inyoka_theme_ubuntuusers/jinja2/errors/: 403.html  403_csrf.html  404.html  500.html
inyoka_theme_ubuntuusers/jinja2/forum/: _edit_latestpost_row.html  _forum.html  delete_topic.html  edit.html  edit.m.html  forum.html  forum_edit.html  index.html  movetopic.html  page.html  page.m.html  post_delete.html  postlist.html  report.html  report.m.html  reportlist.html  revisions.html  splittopic.html  topic.html  topic.m.html  topiclist.html  welcome.html
inyoka_theme_ubuntuusers/jinja2/ikhaya/: archive.html  article_delete.html  article_edit.html  category_edit.html  comment_edit.html  detail.html  detail.m.html  event_delete.html  event_edit.html  event_suggest.html  events.html  index.html  index.m.html  page.html  report_new.html  reportlist.html  reports.html  suggest_delete.html  suggest_new.html  suggestions.html
inyoka_theme_ubuntuusers/jinja2/mails/: new_reported_topic.jabber.txt  page_edited.jabber.txt  topic_split.jabber.txt
inyoka_theme_ubuntuusers/jinja2/pastebin/: add.html  browse.html  delete_entry.html  display.html  page.html
inyoka_theme_ubuntuusers/jinja2/planet/: blog_edit.html  blog_list.html  hide_entry.html  index.html  index.m.html  page.html  suggest.html
inyoka_theme_ubuntuusers/locale/: django.pot
inyoka_theme_ubuntuusers/static/: robots.txt  server_error.html
inyoka_theme_ubuntuusers/templates/: 500.html  appheader.html  confirm_action.html  confirm_action_flash.html  macros.html  overall.html  overall.m.html
tests/: requirements.txt  test_syntax.py
(+370 files in other folders)
